--- a/package.json
+++ b/package.json
@@ -17,9 +17,14 @@
   },
   "homepage": "https://github.com/mauriciomutte/My-books-for-2017#readme",
   "devDependencies": {
-    "browser-sync": "^2.18.13",
+    "browser-sync": "^2.23.2",
     "gulp": "^3.9.1",
-    "gulp-imagemin": "^3.3.0",
+    "gulp-imagemin": "^3.4.0",
     "gulp-watch": "^4.3.11"
+  },
+  "dependencies": {
+    "gulp-concat": "^2.6.1",
+    "gulp-cssmin": "^0.2.0",
+    "gulp-strip-css-comments": "^2.0.0"
   }
 }
