--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "gulp-concat": "^2.6.1",
     "gulp-cssmin": "^0.2.0",
-    "gulp-strip-css-comments": "^2.0.0"
+    "gulp-strip-css-comments": "^2.0.0",
+    "hoek": "^5.0.3"
   }
 }
