--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "homepage": "https://github.com/mauriciomutte/My-books-for-2017#readme",
   "devDependencies": {
-    "browser-sync": "^2.23.2",
+    "browser-sync": "^2.24.6",
     "gulp": "^3.9.1",
     "gulp-imagemin": "^3.4.0",
     "gulp-watch": "^4.3.11"
@@ -26,6 +26,7 @@
     "gulp-concat": "^2.6.1",
     "gulp-cssmin": "^0.2.0",
     "gulp-strip-css-comments": "^2.0.0",
-    "hoek": "^5.0.3"
+    "hoek": "^5.0.3",
+    "npm": "^6.2.0"
   }
 }
