--- a/package.json
+++ b/package.json
@@ -1,34 +1,29 @@
 {
-  "name": "books",
+  "name": "My-books",
   "version": "1.0.0",
-  "description": "Esse ano quero ler ainda mais livros do que ano passado, por isso, criei esse site para compartilhar e gerenciar os livros que estou lendo, já li ou quero ler.",
+  "description": "This year I want to read many books, so I created this repository to share and manage my books and my desired books",
   "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mauriciomutte/My-books-for-2017.git"
+    "url": "git+https://github.com/mauriciomutte/My-books.git"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/mauriciomutte/My-books-for-2017/issues"
+    "url": "https://github.com/mauriciomutte/My-books/issues"
   },
-  "homepage": "https://github.com/mauriciomutte/My-books-for-2017#readme",
+  "homepage": "https://github.com/mauriciomutte/My-books#readme",
   "devDependencies": {
-    "browser-sync": "^2.24.7",
+    "browser-sync": "^2.26.3",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-cssmin": "^0.2.0",
-    "gulp-imagemin": "^4.1.0",
+    "gulp-imagemin": "^5.0.3",
     "gulp-strip-css-comments": "^2.0.0",
-    "gulp-watch": "^4.3.11"
-  },
-  "dependencies": {
-    "deep-extend": "^0.6.0",
-    "hoek": "^5.0.3",
-    "npm": "^6.4.1",
-    "randomatic": "^3.1.0"
+    "gulp-watch": "^5.0.1"
   }
 }
